--- a/main.css
+++ b/main.css
@@ -3,12 +3,24 @@
     margin: 0%;
 }
 
+html{
+    width: 100%;
+    height: 100%;
+}
+
+body{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: linear-gradient(#dd9b22, #e57979 100%);
+}
+
 #message-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 1rem;
+    padding-top: 20vh;
+    padding-bottom: 1rem;
 }
 
 .form-container{
@@ -20,11 +32,14 @@
 
 .form-input{
     width: 50%;
+    height: 2rem;
+    border-radius: 1rem;
 }
 
 .form-container .btn{
     padding: .5rem;
     margin: .2rem;
+    border-radius: 1rem;
 }
 
 .btn-container{
