--- a/main.css
+++ b/main.css
@@ -9,9 +9,13 @@ html{
 }
 
 body{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: linear-gradient(#dd9b22, #e57979 100%);
+    font-family: 'Raleway', sans-serif;
+    font-weight: 00;
+    font-size: 1.5rem;
+    
 }
+
+
 
 #message-container{
     display: flex;
@@ -19,8 +23,9 @@ body{
     justify-content: center;
     align-items: center;
     margin: 1rem;
-    padding-top: 20vh;
+    padding-top: 15vh;
     padding-bottom: 1rem;
+    z-index: 3;
 }
 
 .form-container{
@@ -28,18 +33,30 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 4;
 }
 
 .form-input{
     width: 50%;
     height: 2rem;
     border-radius: 1rem;
+    z-index: 4
 }
+.form-input:focus{
+    width: 55%;
+    height: 2rem;
+    border-radius: 1rem;
+    z-index: 4;
+    outline:black;
+    background-color: white;
+}
+
 
 .form-container .btn{
     padding: .5rem;
     margin: .2rem;
     border-radius: 1rem;
+    z-index: 4;
 }
 
 .btn-container{
@@ -47,3 +64,18 @@ body{
     flex-direction: row;
     align-content: space-between;
 }
+
+#overlay {
+    position: fixed; 
+    display: block; /* Hidden by default */
+    width: 100%; 
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('./img/bball-bg-texture.png');
+    opacity: 0.1;
+    background-repeat: no-repeat;
+    z-index: 0; 
+  }
