--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 * {
     box-sizing: border-box;
-    margin: 0%;
+    margin: 0;
+    padding: 0;
 }
 
 html{
-    width: 100%;
-    height: 100%;
+    position:relative; 
+  min-height: 100%;
 }
 
 body{
@@ -15,17 +16,31 @@ body{
     
 }
 
-
+.header{
+    display: flex;
+    justify-content: center;
+    background-color: rgba(255,255,255,0.8);
+    box-shadow: 3px 2px 1px 2px rgba(0, 0, 0, .1);
+    height: 10vh;   
+    z-index: 4; 
+}
+.header h1{
+    color: black;
+    display: flex;
+    justify-content: center;
+    height: 8vh;   
+    z-index: 1; 
+}
 
 #message-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1rem;
+    margin: .3rem;
     padding-top: 15vh;
     padding-bottom: 1rem;
-    z-index: 3;
+    z-index: 1;
 }
 
 .form-container{
@@ -39,14 +54,15 @@ body{
 .form-input{
     width: 50%;
     height: 2rem;
+    padding: .5rem;
     border-radius: 1rem;
-    z-index: 4
+    z-index: 1;
 }
 .form-input:focus{
     width: 55%;
     height: 2rem;
     border-radius: 1rem;
-    z-index: 4;
+    z-index: 1;
     outline:black;
     background-color: white;
 }
@@ -56,7 +72,7 @@ body{
     padding: .5rem;
     margin: .2rem;
     border-radius: 1rem;
-    z-index: 4;
+    z-index: 1;
 }
 
 .btn-container{
@@ -67,7 +83,7 @@ body{
 
 #overlay {
     position: fixed; 
-    display: block; /* Hidden by default */
+    display: block; 
     width: 100%; 
     height: 100%;
     top: 0;
@@ -79,3 +95,47 @@ body{
     background-repeat: no-repeat;
     z-index: 0; 
   }
+
+.logos a{
+    z-index: 1;
+}
+
+.github{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: flex-start;
+    margin: .3rem;
+    padding-top: .5rem;
+   
+}
+
+.github img{
+    max-width: 2rem;
+    margin-left: 2rem;
+    
+}
+
+
+.footer > div{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height:50px;
+    background-color: rgba(255,255,255,0.8);
+    box-shadow: 3px 2px 1px 2px rgba(0, 0, 0, .1);
+    margin-top: .5rem;
+}
+.footer a{
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+   font-family: "Roboto";
+   font-size: 1rem;
+   text-decoration: none;
+   color: black;
+   z-index: 1;
+}
