--- a/main.css
+++ b/main.css
@@ -32,6 +32,16 @@ body{
     z-index: 1; 
 }
 
+.scoreboard{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 2rem;
+    margin-top: 1rem;
+    font-weight: 700;
+}
+
 #message-container{
     display: flex;
     flex-direction: column;
