--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin-right: 20%;
    
 }
 #chart-toggle{
