updating reset mobile button styling to match submit

--- a/main.css
+++ b/main.css
@@ -124,6 +124,13 @@ body{
     z-index: 1;
 }
 
+#reset{
+    padding: .5rem;
+    margin: .2rem;
+    border-radius: 1rem;
+    z-index: 1;
+}
+
 .btn-container{
     display: flex;
     flex-direction: row;
