--- a/main.css
+++ b/main.css
@@ -42,23 +42,96 @@ body{
     font-weight: 700;
 }
 
-.score-chart{
-    width: 20rem;
+
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    z-index: 4;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #888;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #dd9b22;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+
+  .score-chart{
+    width: auto;
     margin: auto;
-    padding-top: 35vh;
+    padding-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
 .chart-btn-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-end;
+    margin-left: 80%;
     margin-right: 20%;
    
 }
+
+#chart-toggle-label{
+    font-size: 1rem;
+    margin-bottom: .5rem;
+}
+
 #chart-toggle{
     padding: .5rem;
     border-radius: 1rem;
@@ -73,7 +146,7 @@ body{
 }
 
 .hidden{
-    display: none;
+    display: none !important;
 }
 .show{
     display: flex;
