--- a/main.css
+++ b/main.css
@@ -36,15 +36,22 @@ body{
 .scoreboard{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: flex-start;
     margin-left: 2rem;
     margin-top: 1rem;
     font-weight: 700;
+    font-size: 1.2rem;
     z-index: 3;
     min-height: 28px;
 }
 
+#game-score{
+    padding-right: 1rem;
+}
+#game-score-made{
+    padding-left: 8rem;
+}
 
 
 /* The switch - the box around the slider */
