removed default reset btn styling for safari

--- a/main.css
+++ b/main.css
@@ -233,6 +233,11 @@ body{
     z-index: 1;
 }
 
+input[type=text], input[type=button] {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    }
+
 .btn-container{
     display: flex;
     flex-direction: row;
