--- a/style.css
+++ b/style.css
@@ -228,7 +228,44 @@
     }
   }
   
-
+/**
+ * ----------------------------------------
+ * animation puff-in-center
+ * ----------------------------------------
+ */
+ @-webkit-keyframes puff-in-center {
+        0% {
+          -webkit-transform: scale(2);
+                  transform: scale(2);
+          -webkit-filter: blur(4px);
+                  filter: blur(4px);
+          opacity: 0;
+        }
+        100% {
+          -webkit-transform: scale(1);
+                  transform: scale(1);
+          -webkit-filter: blur(0px);
+                  filter: blur(0px);
+          opacity: 1;
+        }
+      }
+      @keyframes puff-in-center {
+        0% {
+          -webkit-transform: scale(2);
+                  transform: scale(2);
+          -webkit-filter: blur(4px);
+                  filter: blur(4px);
+          opacity: 0;
+        }
+        100% {
+          -webkit-transform: scale(1);
+                  transform: scale(1);
+          -webkit-filter: blur(0px);
+                  filter: blur(0px);
+          opacity: 1;
+        }
+      }
+      
 
   .bounce-top {
 	-webkit-animation: bounce-top 0.9s both;
@@ -248,4 +285,9 @@
 .color-change-3x {
 	-webkit-animation: color-change-3x 6s linear infinite alternate both;
 	        animation: color-change-3x 6s linear infinite alternate both;
+}
+
+.puff-in-center {
+	-webkit-animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+	        animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
