creating scoreboard bg styling, added orbitron google font family

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@
         }
       }
             
-
+/* Animations */
   .bounce-top {
 	-webkit-animation: bounce-top 0.9s both;
 	        animation: bounce-top 0.9s both;
@@ -348,3 +348,6 @@
 	-webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	        animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+
+
+
