added top margin to message container

--- a/main.css
+++ b/main.css
@@ -185,7 +185,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 2rem;
-    margin: .3rem;
+    margin: 1.3rem;
     padding-top: 2.5rem;
     padding-bottom: .5rem;
     z-index: 1;
